fixing all tests with junit and integration