@@ -26,7 +26,8 @@
         <version.fest-assert>1.4</version.fest-assert>
         <version.jaxb-api>2.2.12</version.jaxb-api>
         <version.xstream>1.4.9</version.xstream>
-        <version.surefire>2.19.1</version.surefire>
+        <!--<version.surefire>2.19.1</version.surefire>-->
+        <version.surefire>2.16</version.surefire>
         <version.logback>1.2.1</version.logback>
         <slf4j.version>1.7.24</slf4j.version>
         <optaplanner.version>6.5.0.Final</optaplanner.version>
@@ -157,13 +158,68 @@
         <defaultGoal>clean install</defaultGoal>
         <pluginManagement>
             <plugins>
+                <!--<plugin>-->
+                    <!--<groupId>org.apache.maven.plugins</groupId>-->
+                    <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                    <!--<version>${version.surefire}</version>-->
+                <!--</plugin>-->
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${version.surefire}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit47</artifactId>
+                            <version>${version.surefire}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
+
             </plugins>
         </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <skipIfEmpty>true</skipIfEmpty>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-test-javadoc</id>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                        <configuration>
+                            <!--<additionnalDependencies>-->
+                                <!--<additionnalDependency>-->
+                                    <!--<groupId>junit</groupId>-->
+                                    <!--<artifactId>junit</artifactId>-->
+                                    <!--<version>${version.junit}</version>-->
+                                <!--</additionnalDependency>-->
+                            <!--</additionnalDependencies>-->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${version.surefire}</version>
+                <configuration combine.self="override">
+                    <!--<argLine>-Xms256m -Xmx768m -XX:MaxPermSize=768m -XX:PermSize=128m -XX:-UseSplitVerifier</argLine>-->
+                    <argLine>-Xms256m</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+
     </build>
 
 </project>
